@@ -2148,6 +2148,56 @@ SEXP attribute_hidden R_LoadFromFile(FILE *fp, int startup)
     }
 }
 
+SEXP attribute_hidden do_loadfile(SEXP call, SEXP op, SEXP args, SEXP env)
+{
+    SEXP file, s;
+    FILE *fp;
+
+    checkArity(op, args);
+
+    PROTECT(file = coerceVector(CAR(args), STRSXP));
+
+    if (!isValidStringF(file))
+        error(_("bad file name"));
+
+    fp = RC_fopen(STRING_ELT(file, 0), "rb", TRUE);
+    if (!fp)
+        error(_("unable to open 'file'"));
+    s = R_LoadFromFile(fp, 0);
+    fclose(fp);
+
+    UNPROTECT(1);
+    return s;
+}
+
+SEXP attribute_hidden do_savefile(SEXP call, SEXP op, SEXP args, SEXP env)
+{
+    FILE *fp;
+    int version;
+
+    checkArity(op, args);
+
+    if (!isValidStringF(CADR(args)))
+        error(_("'file' must be non-empty string"));
+    if (TYPEOF(CADDR(args)) != LGLSXP)
+        error(_("'ascii' must be logical"));
+    if (CADDDR(args) == R_NilValue)
+        version = defaultSaveVersion();
+    else
+        version = asInteger(CADDDR(args));
+    if (version == NA_INTEGER || version <= 0)
+        error(_("invalid '%s' argument"), "version");
+
+    fp = RC_fopen(STRING_ELT(CADR(args), 0), "wb", TRUE);
+    if (!fp)
+        error(_("unable to open 'file'"));
+
+    R_SaveToFileV(CAR(args), fp, INTEGER(CADDR(args))[0], version);
+
+    fclose(fp);
+    return R_NilValue;
+}
+
 static void saveload_cleanup(void *data)
 {
     FILE *fp = (FILE *)data;
